# trusted-operations

./: README.md
AndroidBlueToothSensor/SeRGIoDemo/app/: CMakeLists.txt  build.gradle
AndroidBlueToothSensor/SeRGIoDemo/app/src/androidTest/java/be/kuleuven/dnet/sergiodemo/: ExampleInstrumentedTest.java
AndroidBlueToothSensor/SeRGIoDemo/app/src/main/: AndroidManifest.xml
AndroidBlueToothSensor/SeRGIoDemo/app/src/main/cpp/: native-lib.cpp
AndroidBlueToothSensor/SeRGIoDemo/app/src/main/cpp/Crypto/: Crypto.cpp  Crypto.h  Log.h  RNG.cpp
AndroidBlueToothSensor/SeRGIoDemo/app/src/main/java/be/kuleuven/dnet/sergiodemo/: EncryptedBLEData.java  GattAttributesMap.java  HRMCommunicator.java  HRMConnector.java  MainActivity.java
AndroidBlueToothSensor/SeRGIoDemo/app/src/main/res/layout/: activity_main.xml
AndroidBlueToothSensor/SeRGIoDemo/app/src/main/res/values/: strings.xml
AndroidBlueToothSensor/SeRGIoDemo/app/src/test/java/be/kuleuven/dnet/sergiodemo/: ExampleUnitTest.java
SeRGIoDemo/: .cproject  .project  .sproject  BLE.cpp  BLE.h  Crypto.cpp  Crypto.h  EncHRMService.h  Log.h  SeRGIoDemo.cpp  SeRGIoDemo.h  TinyAES.cpp  TinySha256.cpp  spec.d
